[project]
name = "test"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []
[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/fiflib"]
[tool.hatch.build.targets.sdist]
include = [
    "src/fiflib/*.py"
]
